<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hbd1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/receiver_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal"
            android:text="@string/EXTRA_MESSAGE1"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/message_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/EXTRA_MESSAGE3"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/sender_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/EXTRA_MESSAGE2"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/go_back"
        android:textColor="#FFFFFF" />

</RelativeLayout>